# sunshine

./: .gitignore  CLAUDE.md  README.md  platformio.ini  prompts.md
docs/: ARCHITECTURE.md  BRINGUP.md  BUG_PATTERNS.md  DEBUGGING.md  FILTER_MATH.md  TUNING.md
docs/superpowers/plans/: 2026-05-26-sunshine-app.md  2026-05-26-sunshine-brain.md  2026-05-26-sunshine-core.md  2026-05-26-sunshine-receiver.md  2026-05-27-bugfix.md  2026-06-21-filter-telemetry-fixes.md  2026-06-21-melty-rate-bias-and-50hz-telemetry.md  melty-rate-bias-filter-fix.md
docs/superpowers/specs/: 2026-05-26-sunshine-system-design.md  2026-05-27-bugfix-design.md
include/dshot/: data.h  decoder.h  encoder.h  esc.h  utilities.h
lib/RCPWMReader/: RCPWMReader.cpp  RCPWMReader.h
src/: main.cpp
src/dshot/: encoder.cpp  esc.cpp  utilities.cpp
sunshine_app/: package.json  pnpm-lock.yaml
sunshine_app/src/: App.css  App.tsx
sunshine_app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
sunshine_app/src-tauri/icons/: icon.icns
sunshine_app/src-tauri/src/: commands.rs  controls.rs  ffi.rs  lib.rs  logging.rs  main.rs  pipeline.rs  protocol.rs  replay.rs  serial.rs  simulation.rs
sunshine_app/src/components/: ChannelSelector.tsx  ConnectionPanel.tsx  DriverStation.tsx  GraphPanel.tsx  Header.tsx  LoggingControl.tsx  ModeButtons.tsx  StatusBar.tsx  TopBar.tsx  UPlotCanvas.tsx  VariableTree.tsx
sunshine_app/src/hooks/: useAppState.ts  useKeyboard.ts
sunshine_app/src/types/: sunshine.ts
sunshine_brain/: .gitignore  platformio.ini
sunshine_brain/include/: bringup.h  config.h
sunshine_brain/lib/sunshine_core/: brain.c  control.c  derot_filter.c  kalman.c  library.json  sunshine_core.h  utils.c
sunshine_brain/src/: dshot.cpp  dshot.h  main.cpp  nav_control.cpp  nav_control.h  ring_buffer.h  telemetry.cpp  telemetry.h
sunshine_brain/src/sensors/: adxl375.cpp  adxl375.h  lis3mdl.cpp  lis3mdl.h
sunshine_core/: .gitignore  CMakeLists.txt
sunshine_core/include/: sunshine_core.h
sunshine_core/src/: brain.c  control.c  derot_filter.c  kalman.c  mag_heading.c  utils.c
sunshine_core/test/: test_brain.c  test_control.c  test_derot_filter.c  test_kalman.c  test_mag_heading.c  test_runner.h  test_utils.c
sunshine_pcb/: .gitignore  fp-lib-table  sunshine_outline.dxf  sunshine_pcb-rounded.kicad_pcb  sunshine_pcb-rounded.kicad_pro  sunshine_pcb.kicad_pcb  sunshine_pcb.kicad_pro  sunshine_pcb.kicad_sch  sunshine_pcb.round-tracks-config  sym-lib-table
sunshine_pcb/custom/footprint/: 3x4 Male Pin Header.STEP  CAP-TH_BD6.3-P2.50-D0.6-FD-1.step  CONN_GT-USB-7055A_GSW.kicad_mod  DualAM32.kicad_mod  FS2A.kicad_mod  FS2a-mini.STEP  (+7 more)
sunshine_pcb/production/: netlist.ipc
sunshine_receiver/: .gitignore  platformio.ini
sunshine_receiver/include/: config.h  led_status.h  protocol.h
sunshine_receiver/src/: espnow_rx.cpp  led_status.cpp  main.cpp  usb_bridge.cpp
tools/: gen_filter_coefficients.py
tools/replay/: .gitignore  CMakeLists.txt  analyze.py  msvc_compat.h  replay.c
(+7 files in other folders)
