[package]
name    = "sunshine_app"
version = "0.1.0"
edition = "2021"

[lib]
name         = "sunshine_app_lib"
crate-type   = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1"

[dependencies]
tauri        = { version = "2", features = [] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serialport   = "4"
byteorder    = "1"
parking_lot  = "0.12"
tokio        = { version = "1", features = ["full"] }
dirs         = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
